<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/ivFotoProducto"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/iv_tarjeta_contentDescription"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_background" />

        <!-- Contador -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncrementar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-4dp"
            android:layout_weight="0"
            android:text="@string/btn_aniadir"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_Contador"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nombreProducto"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <TextView
                android:id="@+id/tvPrecioProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_precioEuros"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:textColor="?android:attr/textColorSecondary" />

            <CheckBox
                android:id="@+id/chkVegano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/chk_Vegano"
                android:visibility="gone"/> <!-- Establecer la visibilidad a "gone" -->

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>